--- a/index.html
+++ b/index.html
@@ -13,359 +13,361 @@
   <script defer src="assets/js/config.js"></script>
 
   <style>
-  body.home-page{
-    background:
-      radial-gradient(circle at top,#111827 0,#020617 55%);
-  }
-
-  .hero-main{
-    max-width:980px;
-    margin:0 auto;
-    padding:70px 0 60px;
-    text-align:center;
-  }
-
-  .hero-kicker{
-    display:inline-flex;
-    align-items:center;
-    gap:8px;
-    padding:4px 12px;
-    border-radius:999px;
-    font-size:.75rem;
-    letter-spacing:.18em;
-    text-transform:uppercase;
-    background:rgba(0,0,0,.6);
-    border:1px solid rgba(148,163,184,.5);
-    color:#e5e7eb;
-    margin-bottom:14px;
-    margin-left:89px;
-  }
-
-  .hero-kicker-icon{
-    width:20px;
-    height:20px;
-    border-radius:50%;
-    flex-shrink:0;
-    background:url('assets/fish-gold.png') center/cover no-repeat;
-  }
-
-  .hero-kicker-text{
-    font-size:.75rem;
-    letter-spacing:.18em;
-    text-transform:uppercase;
-  }
-
-  /* Головний логотип STOLAR CARP */
-  .hero-title{
-    position:relative;
-    z-index:1;
-    font-size:clamp(40px,7vw,64px);
-    font-weight:900;
-    letter-spacing:.06em;
-    margin:0 0 36px;
-    text-transform:uppercase;
-
-    background:linear-gradient(90deg,#ffd700 0%,#ff8c00 40%,#d90429 100%);
-    -webkit-background-clip:text;
-    background-clip:text;
-    color:transparent;
-
-    text-shadow:
-      0 1px 0 rgba(255,255,255,0.3),
-      0 2px 0 rgba(140,90,0,0.9),
-      0 5px 10px rgba(0,0,0,0.85);
-
-    opacity:0;
-    transform:translateY(14px);
-    animation:heroTitleFade 0.9s ease-out forwards;
-  }
-
-  /* Підсвітка фону позаду STOLAR CARP */
-  .hero-title::before{
-    content:"";
-    position:absolute;
-    z-index:-1;
-    left:50%;
-    top:50%;
-    transform:translate(-50%,-50%);
-
-    width:340px;
-    height:110px;
-
-    background:
-      radial-gradient(circle at 50% 40%,
-        rgba(255,215,0,0.28) 0%,
-        rgba(255,140,0,0.18) 35%,
-        rgba(217,4,41,0.14) 60%,
-        transparent 80%);
-
-    filter:blur(16px);
-    opacity:0;
-    pointer-events:none;
-    animation:heroGlow 1.1s ease-out forwards 0.1s;
-  }
-
-  /* Лінія під STOLAR CARP */
-  .hero-title::after{
-    content:"";
-    position:absolute;
-    left:50%;
-    transform:translateX(-50%);
-    bottom:-14px;
-
-    width:240px;
-    height:3px;
-    border-radius:999px;
-
-    background:linear-gradient(90deg,#ffd700 0%,#ff8c00 50%,#d90429 100%);
-    box-shadow:0 0 6px rgba(255,180,0,.6);
-
-    opacity:0;
-    animation:heroLineFade 1.1s ease-out forwards;
-  }
-
-  .hero-subtitle{
-    margin:14px auto 0;
-    max-width:640px;
-    color:#d1d5db;
-    font-size:1.02rem;
-  }
-
-  .hero-tags{
-    margin-top:18px;
-    display:flex;
-    flex-wrap:wrap;
-    gap:8px;
-    justify-content:center;
-  }
-  .hero-tag{
-    padding:4px 12px;
-    border-radius:999px;
-    border:1px solid rgba(148,163,184,.55);
-    font-size:.8rem;
-    color:#e5e7eb;
-    background:rgba(15,23,42,.9);
-  }
-
-  .hero-cta{
-    margin-top:30px;
-    display:flex;
-    flex-wrap:wrap;
-    gap:12px;
-    justify-content:center;
-  }
-  .btn-lg{
-    padding:12px 22px;
-    font-size:.98rem;
-    border-radius:999px;
-  }
-
-  .btn--accent{
-    background:linear-gradient(135deg,#f6c34c,#f28b2b);
-    color:#111;
-    border:none;
-  }
-  .btn--accent:hover{
-    filter:brightness(1.05);
-  }
-
-  .hero-meta{
-    margin-top:22px;
-    font-size:.88rem;
-    color:#9ca3af;
-  }
-
-  .hero-season-card{
-    margin-top:40px;
-    padding:22px 18px;
-    border-radius:22px;
-    background:radial-gradient(circle at top,#1e293b 0,#020617 65%);
-    border:1px solid rgba(148,163,184,.35);
-    box-shadow:0 18px 40px rgba(0,0,0,.8);
-    text-align:center;
-  }
-  .hero-season-card h2{
-    margin:0 0 10px;
-  }
-  .hero-season-card p{
-    margin:0 0 16px;
-    color:#e5e7eb;
-    font-size:.95rem;
-  }
-
-  @media (max-width:640px){
-    .hero-main{padding:60px 0 40px;}
-  }
-
-  .hero-kicker-wrap{
-    position:relative;
-    display:inline-block;
-  }
-
-  .hero-fish-overlay{
-    position:absolute;
-    left:-15px;
-    top:0%;
-    transform:translateY(-50%);
-    width:105px;
-    height:105px;
-    z-index:10;
-    pointer-events:none;
-  }
-
-  /* ---- НОВІ БЛОКИ ГОЛОВНОЇ ---- */
-
-  .info-block{
-    max-width:720px;
-    margin:0 auto;
-    padding:40px 0;
-    color:#e5e7eb;
-    text-align:left;
-  }
-
-  .info-text{
-    max-width:none;
-    margin:12px 0 0;
-    color:#d1d5db;
-    font-size:.98rem;
-  }
-
-  .info-list,
-  .stage-list,
-  .advantages-list{
-    list-style:none;
-    padding:0;
-    margin:20px 0 0;
-    max-width:none;
-    text-align:left;
-    color:#e5e7eb;
-    font-size:.95rem;
-  }
-
-  .info-list li,
-  .stage-list li,
-  .advantages-list li{
-    padding:6px 0;
-    border-bottom:1px solid rgba(148,163,184,.18);
-  }
-
-  .final-highlight{
-    color:#facc15;
-    font-weight:600;
-  }
-
-  /* Заголовки блоків + бренд */
-  .section-title{
-    position:relative;
-    margin:0 0 18px;
-    font-size:1.35rem;
-    font-weight:700;
-    color:#e5e7eb;
-    padding-bottom:8px;
-  }
-
-  .section-title__brand{
-    background:linear-gradient(90deg,#ffd700 0%,#ff8c00 40%,#d90429 100%);
-    -webkit-background-clip:text;
-    background-clip:text;
-    color:transparent;
-    font-weight:800;
-    letter-spacing:.04em;
-  }
-
-  .section-title::after{
-    content:"";
-    position:absolute;
-    left:0;
-    bottom:0;
-    width:120px;
-    height:2px;
-    border-radius:999px;
-    background:linear-gradient(90deg,#ffd700 0%,#ff8c00 50%,#d90429 100%);
-    box-shadow:0 0 6px rgba(255,180,0,.35);
-  }
-
-  .mission-cards{
-    margin-top:22px;
-    display:flex;
-    flex-direction:column;
-    gap:12px;
-  }
-
-  .lake-cards{
-    margin-top:22px;
-    display:flex;
-    flex-wrap:wrap;
-    gap:12px;
-    justify-content:center;
-  }
-
-  .mission-card,
-  .lake-card{
-    padding:10px 16px;
-    border-radius:14px;
-    border:1px solid rgba(148,163,184,.35);
-    background:rgba(15,23,42,.9);
-    font-size:.9rem;
-  }
-
-  .mission-card{
-    width:100%;
-    margin:0;
-  }
-
-  .call-to-action{
-    text-align:left;
-  }
-
-  .call-to-action .btn{
-    margin-top:16px;
-  }
-
-  .section.highlight{
-    text-align:center;
-    padding:60px 0;
-  }
-
-  @media (max-width:640px){
-    .info-block{
-      padding:28px 0;
+    body.home-page{
+      background:
+        radial-gradient(circle at top,#111827 0,#020617 55%);
     }
-  }
 
-  /* Анімації */
-  @keyframes heroTitleFade{
-    0%{
+    .hero-main{
+      max-width:980px;
+      margin:0 auto;
+      padding:70px 0 60px;
+      text-align:center;
+    }
+
+    .hero-kicker{
+      display:inline-flex;
+      align-items:center;
+      gap:8px;
+      padding:4px 12px;
+      border-radius:999px;
+      font-size:.75rem;
+      letter-spacing:.18em;
+      text-transform:uppercase;
+      background:rgba(0,0,0,.6);
+      border:1px solid rgba(148,163,184,.5);
+      color:#e5e7eb;
+      margin-bottom:14px;
+      margin-left:89px;
+    }
+
+    .hero-kicker-icon{
+      width:20px;
+      height:20px;
+      border-radius:50%;
+      flex-shrink:0;
+      background:url('assets/fish-gold.png') center/cover no-repeat;
+    }
+
+    .hero-kicker-text{
+      font-size:.75rem;
+      letter-spacing:.18em;
+      text-transform:uppercase;
+    }
+
+    /* Головний логотип STOLAR CARP */
+    .hero-title{
+      position:relative;
+      z-index:1;
+      font-size:clamp(40px,7vw,64px);
+      font-weight:900;
+      letter-spacing:.06em;
+      margin:0 0 36px;
+      text-transform:uppercase;
+
+      background:linear-gradient(90deg,#ffd700 0%,#ff8c00 40%,#d90429 100%);
+      -webkit-background-clip:text;
+      background-clip:text;
+      color:transparent;
+
+      text-shadow:
+        0 1px 0 rgba(255,255,255,0.3),
+        0 2px 0 rgba(140,90,0,0.9),
+        0 5px 10px rgba(0,0,0,0.85);
+
       opacity:0;
-      transform:translateY(22px);
+      transform:translateY(14px);
+      animation:heroTitleFade 0.9s ease-out forwards;
     }
-    100%{
-      opacity:1;
-      transform:translateY(0);
-    }
-  }
 
-  @keyframes heroLineFade{
-    0%{
+    /* Підсвітка фону позаду STOLAR CARP */
+    .hero-title::before{
+      content:"";
+      position:absolute;
+      z-index:-1;
+      left:50%;
+      top:50%;
+      transform:translate(-50%,-50%);
+
+      width:340px;
+      height:110px;
+
+      background:
+        radial-gradient(circle at 50% 40%,
+          rgba(255,215,0,0.28) 0%,
+          rgba(255,140,0,0.18) 35%,
+          rgba(217,4,41,0.14) 60%,
+          transparent 80%);
+
+      filter:blur(16px);
       opacity:0;
-      width:0;
+      pointer-events:none;
+      animation:heroGlow 1.1s ease-out forwards 0.1s;
     }
-    100%{
-      opacity:1;
+
+    /* Лінія під STOLAR CARP */
+    .hero-title::after{
+      content:"";
+      position:absolute;
+      left:50%;
+      transform:translateX(-50%);
+      bottom:-14px;
+
       width:240px;
-    }
-  }
+      height:3px;
+      border-radius:999px;
 
-  @keyframes heroGlow{
-    0%{
+      background:linear-gradient(90deg,#ffd700 0%,#ff8c00 50%,#d90429 100%);
+      box-shadow:0 0 6px rgba(255,180,0,.6);
+
       opacity:0;
-      transform:translate(-50%,-55%) scale(0.9);
+      animation:heroLineFade 1.1s ease-out forwards;
     }
-    100%{
-      opacity:1;
-      transform:translate(-50%,-50%) scale(1);
+
+    .hero-subtitle{
+      margin:14px auto 0;
+      max-width:640px;
+      color:#d1d5db;
+      font-size:1.02rem;
     }
-  }
+
+    .hero-tags{
+      margin-top:18px;
+      display:flex;
+      flex-wrap:wrap;
+      gap:8px;
+      justify-content:center;
+    }
+    .hero-tag{
+      padding:4px 12px;
+      border-radius:999px;
+      border:1px solid rgba(148,163,184,.55);
+      font-size:.8rem;
+      color:#e5e7eb;
+      background:rgba(15,23,42,.9);
+    }
+
+    .hero-cta{
+      margin-top:30px;
+      display:flex;
+      flex-wrap:wrap;
+      gap:12px;
+      justify-content:center;
+    }
+    .btn-lg{
+      padding:12px 22px;
+      font-size:.98rem;
+      border-radius:999px;
+    }
+
+    .btn--accent{
+      background:linear-gradient(135deg,#f6c34c,#f28b2b);
+      color:#111;
+      border:none;
+    }
+    .btn--accent:hover{
+      filter:brightness(1.05);
+    }
+
+    .hero-meta{
+      margin-top:22px;
+      font-size:.88rem;
+      color:#9ca3af;
+    }
+
+    .hero-season-card{
+      margin-top:40px;
+      padding:22px 18px;
+      border-radius:22px;
+      background:radial-gradient(circle at top,#1e293b 0,#020617 65%);
+      border:1px solid rgba(148,163,184,.35);
+      box-shadow:0 18px 40px rgba(0,0,0,.8);
+      text-align:center;
+    }
+    .hero-season-card h2{
+      margin:0 0 10px;
+    }
+    .hero-season-card p{
+      margin:0 0 16px;
+      color:#e5e7eb;
+      font-size:.95rem;
+    }
+
+    @media (max-width:640px){
+      .hero-main{padding:60px 0 40px;}
+    }
+
+    .hero-kicker-wrap{
+      position: relative;
+      display: inline-block;
+    }
+
+    .hero-fish-overlay{
+      position: absolute;
+      left: -15px;
+      top: 0%;
+      transform: translateY(-50%);
+      width: 105px;
+      height: 105px;
+      z-index: 10;
+      pointer-events: none;
+    }
+
+    /* ---- НОВІ БЛОКИ ГОЛОВНОЇ ---- */
+
+    .info-block{
+      max-width:720px;
+      margin:0 auto;
+      padding:40px 0;
+      color:#e5e7eb;
+      text-align:left;
+    }
+
+    .info-text{
+      max-width:none;
+      margin:12px 0 0;
+      color:#d1d5db;
+      font-size:.98rem;
+    }
+
+    .info-list,
+    .stage-list,
+    .advantages-list{
+      list-style:none;
+      padding:0;
+      margin:20px 0 0;
+      max-width:none;
+      text-align:left;
+      color:#e5e7eb;
+      font-size:.95rem;
+    }
+
+    .info-list li,
+    .stage-list li,
+    .advantages-list li{
+      padding:6px 0;
+      border-bottom:1px solid rgba(148,163,184,.18);
+    }
+
+    .final-highlight{
+      color:#facc15;
+      font-weight:600;
+    }
+
+    /* Заголовки секцій + бренд */
+    .section-title{
+      position:relative;
+      display:inline-block;      /* щоб лінія була по ширині тексту */
+      margin:0 0 18px;
+      font-size:1.35rem;
+      font-weight:700;
+      color:#e5e7eb;
+      padding-bottom:6px;
+    }
+
+    .section-title__brand{
+      background:linear-gradient(90deg,#ffd700 0%,#ff8c00 40%,#d90429 100%);
+      -webkit-background-clip:text;
+      background-clip:text;
+      color:transparent;
+      font-weight:800;
+      letter-spacing:.04em;
+    }
+
+    .section-title::after{
+      content:"";
+      position:absolute;
+      left:0;
+      bottom:0;
+      width:100%;
+      height:2px;
+      border-radius:999px;
+      background:linear-gradient(90deg,#ffd700 0%,#ff8c00 50%,#d90429 100%);
+      box-shadow:0 0 6px rgba(255,180,0,.35);
+    }
+
+    /* Місія: чистий вертикальний стовпець по лівому краю */
+    .mission-cards{
+      margin-top:22px;
+      display:flex;
+      flex-direction:column;
+      gap:12px;
+    }
+
+    .lake-cards{
+      margin-top:22px;
+      display:flex;
+      flex-wrap:wrap;
+      gap:12px;
+      justify-content:center;
+    }
+
+    .mission-card,
+    .lake-card{
+      padding:10px 16px;
+      border-radius:14px;
+      border:1px solid rgba(148,163,184,.35);
+      background:rgba(15,23,42,.9);
+      font-size:.9rem;
+    }
+
+    .mission-card{
+      width:100%;
+      margin:0;
+    }
+
+    .call-to-action{
+      text-align:left;
+    }
+
+    .call-to-action .btn{
+      margin-top:16px;
+    }
+
+    .section.highlight{
+      text-align:center;
+      padding:60px 0;
+    }
+
+    @media (max-width:640px){
+      .info-block{
+        padding:28px 0;
+      }
+    }
+
+    /* Анімації */
+    @keyframes heroTitleFade{
+      0%{
+        opacity:0;
+        transform:translateY(22px);
+      }
+      100%{
+        opacity:1;
+        transform:translateY(0);
+      }
+    }
+
+    @keyframes heroLineFade{
+      0%{
+        opacity:0;
+        width:0;
+      }
+      100%{
+        opacity:1;
+        width:240px;
+      }
+    }
+
+    @keyframes heroGlow{
+      0%{
+        opacity:0;
+        transform:translate(-50%,-55%) scale(0.9);
+      }
+      100%{
+        opacity:1;
+        transform:translate(-50%,-50%) scale(1);
+      }
+    }
   </style>
 </head>
 <body class="home-page">
@@ -445,7 +447,7 @@
   </section>
 
   <section class="section container info-block">
-    <h2 class="title-gradient">Хто може взяти участь?</h2>
+    <h2 class="section-title">Хто може взяти участь?</h2>
     <p class="info-text">
       STOLAR CARP відкритий для всіх, хто любить коропову риболовлю. 
       Для участі не обов’язково бути професійним спортсменом — головне бажання боротися чесно 
@@ -462,7 +464,9 @@
   </section>
 
   <section class="section container info-block">
-    <h2 class="title-gradient">Місія STOLAR CARP</h2>
+    <h2 class="section-title">
+      Місія <span class="section-title__brand">STOLAR CARP</span>
+    </h2>
     <p class="info-text">
       Ми прагнемо створити новий стандарт коропових турнірів в Україні: організований, 
       прозорий та орієнтований на розвиток спільноти. Кожне змагання — це не лише боротьба 
@@ -478,7 +482,7 @@
   </section>
 
   <section class="section container info-block">
-    <h2 class="title-gradient">Структура сезону</h2>
+    <h2 class="section-title">Структура сезону</h2>
     <p class="info-text">
       Сезон STOLAR CARP складається з 5 рейтингових етапів. 
       Команди набирають бали на кожному з них, а за підсумком сезону найкращі потрапляють 
@@ -496,7 +500,7 @@
   </section>
 
   <section class="section container info-block">
-    <h2 class="title-gradient">Локації сезону</h2>
+    <h2 class="section-title">Локації сезону</h2>
     <p class="info-text">
       Водойми обрані так, щоб поєднати комфортні умови та спортивний інтерес. 
       Кожна локація має свій характер, що робить сезон різноманітним і непередбачуваним.
@@ -514,7 +518,9 @@
   </section>
 
   <section class="section container info-block">
-    <h2 class="title-gradient">Чому саме STOLAR CARP?</h2>
+    <h2 class="section-title">
+      Чому саме <span class="section-title__brand">STOLAR CARP</span>?
+    </h2>
 
     <ul class="advantages-list">
       <li>Незалежне суддівство та чіткий регламент</li>
@@ -526,7 +532,9 @@
   </section>
 
   <section class="section container info-block call-to-action">
-    <h2 class="title-gradient">Готовий до сезону STOLAR CARP?</h2>
+    <h2 class="section-title">
+      Готовий до сезону <span class="section-title__brand">STOLAR CARP</span>?
+    </h2>
     <p class="info-text">
       Збери команду, підготуй снасті та подай заявку на участь. 
       Попереду 5 етапів, фінал і шанс вписати свою команду в історію STOLAR CARP.
