--- a/index.html
+++ b/index.html
@@ -405,9 +405,9 @@
     <h1 class="hero-title">STOLAR CARP</h1>
 
     <p class="hero-subtitle">
-      Створено для розвитку сучасного коропового спорту в Україні. Це змагання для тих, 
-      хто цінує чесну боротьбу, сильних суперників і прозорий результат. Тут важлива не одна риба, 
-      а стабільність, витримка та командна робота протягом сезону. Формується новий стандарт турнірів.
+      STOLAR CARP — це поєднання:
+чистої боротьби, дружньої атмосфери, спортивного драйву, командного духу та поваги до справжніх цінностей карпфішингу.
+
     </p>
 
     <div class="hero-tags">
@@ -437,7 +437,7 @@
       <h2 class="title-gradient">🏆 Сезон STOLAR CARP 2026</h2>
       <p>
         Слідкуй за всіма етапами та Фіналом в одному місці.
-        Архів, Big Fish та підсумковий рейтинг команд.
+        Архів, Live, результати та підсумковий рейтинг команд.
       </p>
       <a href="events/season-2026.html" class="btn btn--primary btn-lg">
         Переглянути сезон 2026
@@ -449,9 +449,14 @@
   <section class="section container info-block">
     <h2 class="section-title">Хто може взяти участь?</h2>
     <p class="info-text">
-      STOLAR CARP відкритий для всіх, хто любить коропову риболовлю. 
-      Для участі не обов’язково бути професійним спортсменом — головне бажання боротися чесно 
-      і поважати суперників.
+      STOLAR CARP відкритий для всіх, хто живе карпфішингом та цінує не лише перемогу, а й шлях до неї. Професійний досвід не є обов’язковим — головне бажання розвиватися, змагатися та поважати суперників.
+
+До участі запрошуються:
+• Команди з 2–3 учасників
+• Початківці та аматори
+• Досвідчені спортсмени
+• Клуби та рибальські об’єднання
+• Ті, хто готовий пройти сезон із 5 етапів та гранд-фіналом
     </p>
 
     <ul class="info-list">
