--- a/index.html
+++ b/index.html
@@ -428,8 +428,7 @@
       </a>
     </div>
 
-    <div class="hero-meta">
-      Локації сезону: Лелехівка · Пристань · Bounty.  
+    <div class="hero-meta">  
       Твій рівень. Твій трофей. Твоя перемога.
     </div>
 
@@ -437,7 +436,7 @@
       <h2 class="title-gradient">🏆 Сезон STOLAR CARP 2026</h2>
       <p>
         Слідкуй за всіма етапами та Фіналом в одному місці.
-        Архів, Live, результати та підсумковий рейтинг команд.
+        Архів, Live результати та підсумковий рейтинг команд.
       </p>
       <a href="events/season-2026.html" class="btn btn--primary btn-lg">
         Переглянути сезон 2026
@@ -449,13 +448,10 @@
   <section class="section container info-block">
     <h2 class="section-title">Хто може взяти участь?</h2>
     <p class="info-text">
-      STOLAR CARP відкритий для всіх, хто живе карпфішингом та цінує не лише перемогу, а й шлях до неї. Професійний досвід не є обов’язковим — головне бажання розвиватися, змагатися та поважати суперників.
+      STOLAR CARP відкритий для всіх, хто живе карпфішингом та цінує не лише перемогу, а й шлях до неї. Професійний досвід не є обов’язковим — головне бажання розвиватися, змагатися, поважати природу та суперників .
 
 До участі запрошуються:
-
-• Клуби та рибальські об’єднання
-
-    </p>
+  </p>
 
     <ul class="info-list">
       <li>• Команди з 2–3 учасників</li>
@@ -472,15 +468,15 @@
     </h2>
     <p class="info-text">
       Ми прагнемо створити новий стандарт коропових турнірів в Україні: організований, 
-      прозорий та орієнтований на розвиток спільноти. Кожне змагання — це не лише боротьба 
+      прозорий та створений для розвитку та популяризацію карпфішингу як спортивний вид спорту. Кожне змагання — це не лише боротьба 
       за кубок, а й зустріч однодумців на березі водойми.
     </p>
 
     <div class="mission-cards">
       <div class="mission-card">✅ Чесні та зрозумілі правила</div>
       <div class="mission-card">📊 Сучасний формат та live-таблиці</div>
-      <div class="mission-card">🤝 Повага до риби й водойм</div>
-      <div class="mission-card">🎣 Розвиток спільноти карпятників</div>
+      <div class="mission-card">🤝 бережне ставлення до риби та природи</div>
+      <div class="mission-card">🎣 популяризації спортивного карпфішингу</div>
     </div>
   </section>
 
@@ -493,12 +489,8 @@
     </p>
 
     <ul class="stage-list">
-      <li>Етап 1 — старт сезону та перший розподіл сил</li>
-      <li>Етап 2 — тактична боротьба на складніших умовах</li>
-      <li>Етап 3 — середина сезону, боротьба за місце в топі</li>
-      <li>Етап 4 — вирішальні очки перед фінішем</li>
-      <li>Етап 5 — останній шанс потрапити у Фінал</li>
-      <li class="final-highlight">Фінал — битва найкращих команд сезону за титул Чемпіона STOLAR CARP</li>
+      <li>Етап 1 • Етап 2 • Етап 3 • Етап 4 • Етап 5</li>
+      <li class="final-highlight">Фінал — битва найкращих команд за титул Чемпіона сезону STOLAR CARP</li>
     </ul>
   </section>
 
@@ -539,8 +531,7 @@
       Готовий до сезону <span class="section-title__brand">STOLAR CARP</span>?
     </h2>
     <p class="info-text">
-      Збери команду, підготуй снасті та подай заявку на участь. 
-      Попереду 5 етапів, фінал і шанс вписати свою команду в історію STOLAR CARP.
+      Зареєструйте команду та приєднуйтесь до сезону STOLAR CARP.
     </p>
 
     <a href="register.html" class="btn btn--accent btn-lg">Подати заявку на участь</a>
